package ex42.base;

import java.util.Arrays;
import java.util.Scanner;

import static java.util.Arrays.sort;

public class Employee {
    public String first;
    public String last;
    public String salary;
    Employee(String fname, String lname, String salary){
        this.first = fname;
        this.last = lname;
        this.salary = salary;
    }
}

