@startuml
'https://plantuml.com/class-diagram
Base42 --> EmployeeArrayBase42
EmployeeArrayBase42 --> Employee
EmployeeArrayBase42 --> StringBase42
StringBase42 --> Base42
class Base42{
printOutput();
}
class Employee{
last name
first name
salary
}
class EmployeeArrayBase42{
createEmployeeList();
}
class StringBase42{
getTabularOutput();
}


@enduml